(fix) token and routing
